experimental/idorg-labs/exposed/metadata.yml
# Kubernetes declaration of Identifiers.org Metadata Resolution API Service - EXPOSED
# Author: Manuel Bernal Llinares <mbdebian@gmail.com>
apiVersion: v1
kind: Service
metadata:
    name: ext-metadata
    labels:
        environment: production
        tier: api
        app: metadata
spec:
    ports:
    - port: 80
      targetPort: 8082
    selector:
        environment: production
        tier: api
        app: metadata
    type: LoadBalancer
