experimental/idorg-labs/exposed/registry.yml
# Kubernetes declaration of Identifiers.org Prefix Registration API service - EXPOSED
# Author: Manuel Bernal Llinares <mbdebian@gmail.com>
apiVersion: v1
kind: Service
metadata:
    name: ext-registry
    labels:
        environment: production
        tier: api
        app: registry
spec:
    ports:
    - port: 80
      targetPort: 8081
    selector:
        environment: production
        tier: api
        app: registry
    type: LoadBalancer
