experimental/idorg-labs/exposed/resolver.yml
# Kubernetes declaration of Identifiers.org Compact ID Resolution API Service - EXPOSED
# Author: Manuel Bernal Llinares <mbdebian@gmail.com>
apiVersion: v1
kind: Service
metadata:
    name: ext-resolver
    labels:
        environment: production
        tier: api
        app: resolver
spec:
    ports:
    - port: 80
      targetPort: 8080
    selector:
        environment: production
        tier: api
        app: resolver
    type: LoadBalancer
