experimental/idorg-labs/exposed/ingress-platform.yml
# Identifiers.org satellite platform ingress controller
# Author: Manuel Bernal Llinares <mbdebian@gmail.com>
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: satellite-deployment
    labels:
        environment: production
        tier: api
        app: satellite-deployment
    annotations:
        kubernetes.io/ingress.class: "gce"
        kubernetes.io/ingress.global-static-ip-name: idorg-labs-satellite-ingress
        ingress.gcp.kubernetes.io/pre-shared-cert: 'idorg-labs-satellite-api-resolver,idorg-labs-satellite-api-metadata,idorg-labs-satellite-web'
        kubernetes.io/ingress.allow-http: "true"
spec:
    rules:
    # Resolver rules
    - host: resolver.api.labs.identifiers.org
      http:
          paths:
              - backend:
                  serviceName: nodeport-resolver
                  servicePort: 8080
    # Metadata Service rules
    - host: metadata.api.labs.identifiers.org
      http:
          paths:
              - backend:
                  serviceName: nodeport-metadata
                  servicePort: 8082
    # Web Frontend rules
    - host: labs.identifiers.org
      http:
          paths:
              - backend:
                  serviceName: nodeport-web-satellite
                  servicePort: 80
